Remove nodecreationtrace